[package]
name        = "near-epoch-manager"
version     = { workspace = true }
authors     = { workspace = true }
edition     = { workspace = true }
rust-version = { workspace = true }
repository  = { workspace = true }
license     = { workspace = true }
description = "Epoch management for Final Layer blockchain"

[dependencies]
borsh               = { workspace = true }
serde               = { workspace = true }
serde_json          = { workspace = true }
near-account-id     = { workspace = true }
near-crypto         = { workspace = true }
near-primitives     = { workspace = true }
near-primitives-core = { workspace = true }
near-chain-configs  = { workspace = true }
anyhow              = { workspace = true }
thiserror           = { workspace = true }
