[package]
name        = "near-primitives-core"
version     = { workspace = true }
authors     = { workspace = true }
edition     = { workspace = true }
rust-version = { workspace = true }
repository  = { workspace = true }
license     = { workspace = true }
description = "Core primitive types for Final Layer blockchain"

[dependencies]
borsh        = { workspace = true }
serde        = { workspace = true }
near-account-id = { workspace = true }
