[package]
name        = "near-primitives"
version     = { workspace = true }
authors     = { workspace = true }
edition     = { workspace = true }
rust-version = { workspace = true }
repository  = { workspace = true }
license     = { workspace = true }
description = "Primitive types and data structures for Final Layer blockchain"

[dependencies]
borsh            = { workspace = true }
serde            = { workspace = true }
serde_json       = { workspace = true }
near-account-id  = { workspace = true }
near-crypto      = { workspace = true }
near-primitives-core = { workspace = true }
sha2             = { workspace = true }
sha3             = { workspace = true }
hex              = { workspace = true }
