[package]
name = "fl-send-tx"
version = "0.1.0"
edition = "2021"
description = "Final Layer transaction sender — sends signed PQC transactions via RPC"

[dependencies]
near-crypto.workspace = true
near-primitives.workspace = true
near-primitives-core.workspace = true
borsh.workspace = true
serde.workspace = true
serde_json.workspace = true
bs58.workspace = true
near-account-id.workspace = true
near-token.workspace = true
reqwest = { workspace = true, features = ["blocking"] }
base64 = "0.21"
anyhow.workspace = true
